--- a/photos.cfg
+++ b/photos.cfg
@@ -2,5 +2,5 @@
   "sourceDir" : "f:/Media/Photos",
   "targetDir" : "m:/Photos",
   "ignoreList" : [ "Thumbs.db" ],
-  "options" : [ "COPY_TO_TARGET", "DELETE_FROM_TARGET", "DRY_RUN" ]
+  "options" : [ "COPY_TO_TARGET" ]
 }
